# cwm-fdi

./: .gitignore  .~lock.assignment1-answers.odt#  assignment1-answers.odt
assignment1/: matmul_fast.py  matmul_slow.py  out.perf
assignment2/: .~lock.assignment2-answers.odt#  analyse_ping.py  assignment2-answers.odt  ping0-0001.txt  ping0-001.txt  ping0-01.txt  rdtime.py  test.py  time_c.txt  time_py.txt
assignment3/: .~lock.assignment3-answers.odt#  assignment3-answers.odt
assignment4/: .~lock.assignment4-answers.odt#  assignment4-answers.odt
assignment4/buffer_overflow/4A/src/: main.c
assignment4/side_channel/login/: views.py
assignment5/: .~lock.assignment5-answers.odt#  assignment5-answers.odt
scripts/: plot.py
wattcher/: README.md  pyproject.toml
wattcher/src/wattcher/: __init__.py  __main__.py  app.py  carbon.py  curve.py  loadgen.py  plot.py  sample.py
wattcher/src/wattcher/sensors/: __init__.py  linux.py
